@@ -380,7 +380,15 @@ A reference to a user object.
 sub can_edit {
     my ($self, $user) = @_;
     return 1 if defined $user && $user->is_admin;
-    ouch(450, 'Insufficient privileges for '.$self->wing_object_name.'.');
+    my $message;
+    if (defined $user) {
+        $message = $user->display_name.' has i';
+    }
+    else {
+        $message = 'I';
+    }
+    $message .= 'nsufficient privileges for '.$self->wing_object_name.'.';
+    ouch(450,$message);
 }
 
 =head2 can_link_to($user) 
