@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2017-09-12
+ * Better insufficient privileges message.
+
 2017-09-08
  * email_override in the config now also ovrrides BCC.
 
